--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body upside-down">
-            <p>Flying: <b><span id="form-location">Dhaka</span> To <span id="to-location">New Work</span></b></p>
+            <p>Flying:&nbsp; &nbsp; <b><span id="form-location">Dhaka</span>&nbsp; &nbsp; To &nbsp; &nbsp;<span id="to-location">New Work</span></b></p>
             <hr>
-            <p>Date: <b><span id="form-date">01/01/2021</span> --> &nbsp; &nbsp; To &nbsp; &nbsp;  --> <span id="to-date">07/01/2021</span></b></p>
+            <p>Date:&nbsp; &nbsp; <b><span id="form-date">01/01/2021</span> -> &nbsp; &nbsp; To &nbsp; &nbsp;  -> <span id="to-date">07/01/2021</span></b></p>
             <hr>
             <p>First Class ticket : <b><span id="slide-first-count">0</span></b></p>
             <hr>
