--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h5>Total Amount : <b>$ <span id="slideTotal-amount">0</span></b></h5>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Confirm</button>
+          <button onclick="window.print()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Confirm</button>
         </div>
       </div>
     </div>
